--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     <a href="./public/Movie Rank/index.html"><img src="./public/Movie Rank/image.png"></a>
 
     <h4>Synth Pad</h4>
-    <a href="./public/Synth Pad/index.html"><img src="./public/Synth Pad/image.png"</a>
+    <a href="./public/Synth Pad/index.html"><img src="./public/Synth Pad/image.png"></a>
+
+    <h4>CSS Colors</h4>
+    <a href="./public/Color Vocab CSS/index.html"><img src="./public/Color Vocab CSS/image.png"></a>
 </body>
 
 <footer>
