--- a/public/Movie Rank/index.html
+++ b/public/Movie Rank/index.html
@@ -25,3 +25,5 @@ alt="The Silence of the Lambs Cover" width="40%"/>
 <a target="_blank" href="https://www.imdb.com/title/tt0102926/?ref_=fn_al_tt_1">More Info</a>
 <p>An intense psychological and crime thriller with brilliant 
     performances by Anthony Hopkins and Jodie Foster.</p>
+
+<footer><a href="/index.html">Home</a></footer>
