--- a/public/Movie Rank/index.html
+++ b/public/Movie Rank/index.html
@@ -26,4 +26,4 @@ alt="The Silence of the Lambs Cover" width="40%"/>
 <p>An intense psychological and crime thriller with brilliant 
     performances by Anthony Hopkins and Jodie Foster.</p>
 
-<footer><a href="/index.html">Home</a></footer>
+<footer><a href="/html-portfolio/index.html">Home</a></footer>
