--- a/public/Color Vocab CSS/index.html
+++ b/public/Color Vocab CSS/index.html
@@ -25,7 +25,7 @@
     <img src="./assets/images/yellow.png" alt="yellow" />
   </body>
 
-  <footer><a href="/index.html">Home</a></footer>
+  <footer><a href="/html-portfolio/index.html">Home</a></footer>
 </html>
 
 <!-- 
