--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 
     <h4>CSS Colors</h4>
     <a href="./public/Color Vocab CSS/index.html"><img src="./public/Color Vocab CSS/image.png"></a>
+
+    <h4>Motivational Memes</h4>
+    <a href="./public/Motivation Memes/index.html"><img src="./public/Motivation Memes/assets/images/image.png"></a>
+
 </body>
 
 <footer>
