--- a/public/Motivation Memes/index.html
+++ b/public/Motivation Memes/index.html
@@ -43,5 +43,5 @@
   </div>
 </body>
 
-<footer><a href="/index.html">Home</a></footer>
+<footer><a href="/html-portfolio/index.html">Home</a></footer>
 </html>
