--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <h4>Motivational Memes</h4>
     <a href="./public/Motivation Memes/index.html"><img src="./public/Motivation Memes/assets/images/image.png"></a>
 
+    <h4>CSS Flags</h4>
+    <a href="./public/CSS Flags/index.html"><img src="./public/CSS Flags/image.png"></a>
 </body>
 
 <footer>
