--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 
     <h4>CSS Flags</h4>
     <a href="./public/CSS Flags/index.html"><img src="./public/CSS Flags/image.png"></a>
+
+    <h4>Responsive CSS</h4>
+    <a href="./public/Web Design Agency/index.html"><img src="./public/Web Design Agency/assets/images/image.png"></a>
 </body>
 
 <footer>
@@ -36,5 +39,4 @@
     <a href="./about.html">About Me</a>
     <a href="./contact.html">Contact Me</a>
 </footer>
-
 </html>
