--- a/public/CSS Flags/index.html
+++ b/public/CSS Flags/index.html
@@ -32,6 +32,12 @@
     </div>
   </div>
 
+  <div class="Sweden-flag border">
+    <div>
+      <div></div>
+    </div>
+  </div>
+
 </body>
 
 <footer><a href="/html-portfolio/index.html">Home</a></footer></html>
