--- a/public/CSS Flags/index.html
+++ b/public/CSS Flags/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <h1>Flags Made Only Using CSS</h1>
+  <h1>Flags Made Using Only CSS</h1>
   <div class="Laos-flag border">
     <div>
       <div>
