--- a/public/CSS Flags/index.html
+++ b/public/CSS Flags/index.html
@@ -38,6 +38,12 @@
     </div>
   </div>
 
+  <div class="Hungary-flag border">
+    <div>
+      <div></div>
+    </div>
+  </div>
+
 </body>
 
 <footer><a href="/html-portfolio/index.html">Home</a></footer></html>
