--- a/public/CSS Flags/index.html
+++ b/public/CSS Flags/index.html
@@ -44,6 +44,14 @@
     </div>
   </div>
 
+  <div class="UAE-flag border">
+    <div>
+      <div>
+        <div></div>
+      </div>
+    </div>
+  </div>
+
 </body>
 
 <footer><a href="/html-portfolio/index.html">Home</a></footer></html>
