--- a/public/CSS Flags/index.html
+++ b/public/CSS Flags/index.html
@@ -52,5 +52,11 @@
     </div>
   </div>
 
+  <div class="Thailand-flag border">
+    <div>
+      <div></div>
+    </div>
+  </div>
+
   <footer><a href="/html-portfolio/index.html">Home</a></footer></html>
 </body>
