--- a/public/CSS Flags/index.html
+++ b/public/CSS Flags/index.html
@@ -58,5 +58,15 @@
     </div>
   </div>
 
+  <div class="Iceland-flag border">
+    <div>
+      <div>
+        <div>
+          <div></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <footer><a href="/html-portfolio/index.html">Home</a></footer></html>
 </body>
