--- a/public/DVDScreensaver/index.html
+++ b/public/DVDScreensaver/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <div id = "dvd">
-        <div id="animate"></div>
+        <div id="animate"><img src="dvdlogo.png"></div>
     </div>
 </body>
 
