--- a/public/DVDScreensaver/index.html
+++ b/public/DVDScreensaver/index.html
@@ -73,6 +73,6 @@
 
 <footer>
     <hr/>
-    <a href="/html-portfolio/index.html">Home</a>
+    <a href="https://eyecode4you.github.io/html-portfolio/">Home</a>
 </footer>
 </html>
