--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <h4>Synth Pad</h4>
     <a href="./public/Synth Pad/index.html"><img src="./public/Synth Pad/image.png"></a>
 
+    <h4>DVD Screensaver</h4>
+    <a href="./public/DVD Screensaver/index.html"><img src="./public/Web Design Agency/assets/images/image.png"></a>
+
     <h4>CSS Colors</h4>
     <a href="./public/Color Vocab CSS/index.html"><img src="./public/Color Vocab CSS/image.png"></a>
 
