--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
     <a href="./public/Synth Pad/index.html"><img src="./public/Synth Pad/image.png"></a>
 
     <h4>DVD Screensaver</h4>
-    <a href="./public/DVD Screensaver/index.html"><img src="./public/Web Design Agency/assets/images/image.png"></a>
-
-    <h4>CSS Colors</h4>
-    <a href="./public/Color Vocab CSS/index.html"><img src="./public/Color Vocab CSS/image.png"></a>
+    <a href="./public/DVD Screensaver/index.html"><img src="./public/DVD Screensaver/image.png"></a>
 
     <h4>Motivational Memes</h4>
     <a href="./public/Motivation Memes/index.html"><img src="./public/Motivation Memes/assets/images/image.png"></a>
