--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a href="./public/Synth Pad/index.html"><img src="./public/Synth Pad/image.png"></a>
 
     <h4>DVD Screensaver</h4>
-    <a href="./public/DVD Screensaver/index.html"><img src="./public/DVD Screensaver/image.png"></a>
+    <a href="./public/DVDScreensaver/index.html"><img src="./public/DVDScreensaver/dvdss.png"></a>
 
     <h4>Motivational Memes</h4>
     <a href="./public/Motivation Memes/index.html"><img src="./public/Motivation Memes/assets/images/image.png"></a>
