--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 
     <h4>Responsive CSS</h4>
     <a href="./public/Web Design Agency/index.html"><img src="./public/Web Design Agency/assets/images/image.png"></a>
+
+    <h4>Harvard Reference Generator</h4>
+    <a href="./public/RefGenSite/index.html"><img src="./public/RefGenSite/image.png"></a>
 </body>
 
 <footer>
