--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 
     <h4>Harvard Reference Generator</h4>
     <a href="./public/RefGenSite/index.html"><img src="./public/RefGenSite/image.png"></a>
+
+    <h4>Interactive Caesar Cipher</h4>
+    <a href="./public/Interactive Caesar Cipher/index.html"><img src="./public/Interactive Caesar Cipher/image.png"></a>
 </body>
 
 <footer>
