--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 
     <h4>Interactive Caesar Cipher</h4>
     <a href="./public/Interactive Caesar Cipher/index.html"><img src="./public/Interactive Caesar Cipher/image.png"></a>
+
+    <h4>CV Site</h4>
+    <a href="./public/CV Site/index.html"><img src="./public/CV Site/image.png"></a>
 </body>
 
 <footer>
