--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EyeCode Portfolio</title>
+    <style>
+        img {
+            border: 1px solid black;
+            border-radius: 5px;
+            margin: auto;
+            width: 200px;
+            height: 200px;
+        }
+        span {
+            display: inline-block;
+            margin: 5px;
+            font-weight: bold;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
@@ -12,34 +28,52 @@
     <h2>I'm a Cyberenaissance Man</h2>
     <hr/>
 
-    <h3>Projects</h3>
-    
-    <h4>Movie Rankings</h4>
+    <h2>Projects</h2>
+
+    <span>
+    <h3>Movie Rankings</h3>
     <a href="./public/Movie Rank/index.html"><img src="./public/Movie Rank/image.png"></a>
+    </span>
 
-    <h4>Synth Pad</h4>
+    <span>
+    <h3>Synth Pad</h3>
     <a href="./public/Synth Pad/index.html"><img src="./public/Synth Pad/image.png"></a>
+    </span>
 
-    <h4>DVD Screensaver</h4>
+    <span>
+    <h3>DVD Screensaver</h3>
     <a href="./public/DVDScreensaver/index.html"><img src="./public/DVDScreensaver/dvdss.png"></a>
+    </span>
 
-    <h4>Motivational Memes</h4>
+    <span>
+    <h3>Motivational Memes</h3>
     <a href="./public/Motivation Memes/index.html"><img src="./public/Motivation Memes/assets/images/image.png"></a>
+    </span>
 
-    <h4>CSS Flags</h4>
+    <span>
+    <h3>CSS Flags</h3>
     <a href="./public/CSS Flags/index.html"><img src="./public/CSS Flags/image.png"></a>
+    </span>
 
-    <h4>Responsive CSS</h4>
+    <span>
+    <h3>Responsive CSS</h3>
     <a href="./public/Web Design Agency/index.html"><img src="./public/Web Design Agency/assets/images/image.png"></a>
+    </span>
 
-    <h4>Harvard Reference Generator</h4>
+    <span>
+    <h3>Harvard Reference <br>Generator</h3>
     <a href="./public/RefGenSite/index.html"><img src="./public/RefGenSite/image.png"></a>
+    </span>
 
-    <h4>Interactive Caesar Cipher</h4>
+    <span>
+    <h3>Interactive Caesar <br>Cipher</h3>
     <a href="./public/Interactive Caesar Cipher/index.html"><img src="./public/Interactive Caesar Cipher/image.png"></a>
+    </span>
 
-    <h4>CV Site</h4>
+    <span>
+    <h3>CV Site</h3>
     <a href="./public/CV Site/index.html"><img src="./public/CV Site/image.png"></a>
+    </span>
 </body>
 
 <footer>
