--- a/public/CV Site/skills.html
+++ b/public/CV Site/skills.html
@@ -7,6 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta description="skills">
     <link rel="stylesheet" href="css/style.css">
+
+    <style>
+        ul {
+            list-style: none;
+        }
+    </style>
 </head>
 
 <body>
