--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
     </span>
 
     <span>
+    <h3>Price Table</h3>
+    <a href="./public/Price Table/index.html"><img src="./public/Price Table/image.png"></a>
+    </span>
+
+    <span>
     <h3>CV Site</h3>
     <a href="./public/CV Site/index.html"><img src="./public/CV Site/image.png"></a>
     </span>
